// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inject given anonymous function as instantiate, works 1`] = `
<div
  data-dependency-value="some-dependency-value"
  data-instantiation-parameter="instantiation-value"
  data-some-prop-test="true"
>
  Some sync component content
</div>
`;

exports[`Inject given class component with a synchronous dependency, renders 1`] = `
<div
  data-some-prop-test="true"
>
  some-synchronous-dependency-value
</div>
`;

exports[`Inject given class component with an asynchronous dependency, renders 1`] = `
<div
  data-some-prop-test="true"
>
  some-asynchronous-dependency-value
</div>
`;

exports[`Inject given instantiation parameter and one level function component with asynchronous dependencies, works 1`] = `null`;

exports[`Inject given instantiation parameter and one level function component with synchronous dependencies, works 1`] = `
<div
  data-dependency-value="some-synchronous-value"
  data-instantiation-parameter="parameter"
  data-some-prop-test="true"
>
  Some sync component content
</div>
`;

exports[`Inject given no instantiation parameter and one level function component with asynchronous dependencies, works 1`] = `null`;

exports[`Inject given no instantiation parameter and one level function component with synchronous dependencies, works 1`] = `
<div
  data-dependency-value="some-synchronous-value"
  data-some-prop-test="true"
>
  Some sync component content
</div>
`;

exports[`Inject given two level function component with asynchronous dependencies without placeholder does not render component yet 1`] = `null`;

exports[`Inject given two level function component with asynchronous dependencies without placeholder when async thing resolves, renders component 1`] = `
<div
  data-some-prop-test="true"
>
  some-dependency-value
</div>
`;

exports[`Inject given two level function component with synchronous dependencies, works 1`] = `
<div
  data-some-prop-test="true"
>
  Some sync component content
</div>
`;
